--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-<body>
+<body class="fon-2">
 
     <nav>
         <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
@@ -42,6 +42,30 @@
 
 
     <!-- main -->
+
+    <h2>Destacados</h2>
+    <div class="col desta-2">
+        <div class="card h-100">
+          <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/043.webp" class="card-img-top" alt="Los Angeles Skyscrapers"/>
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text"></p>
+        </div>
+    </div>
+    <div class="col">
+        <div class="card h-100">
+          <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/043.webp" class="card-img-top" alt="Los Angeles Skyscrapers"/>
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text"></p>
+        </div>
+    </div>
+        
+    
+   
+    <!-- ultimas Publicaciones -->
+
+    <h2>Últimas Publicaciones</h2>
 
     <div class="row row-colsm-1 row-cols-md-2 row-cols-lg-3 g-0">
       <div class="col">
